added interactivity through DOM manipulation
defined elements and refactored code for DOM based gameplay

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -18,6 +18,11 @@
                 <div class="player-choice">
                 </div>
             </div>
+            <div class="scoreboard">
+                <div class="score" id="player-score">2</div>
+                <div class="round">Round 1</div>
+                <div class="score" id="computer-score">4</div>
+            </div>
             <div class="computer side">
                 <h2>Computer</h2>
                 <div class="computer-choice">
@@ -28,20 +33,20 @@
             <h3>Make Your Selection</h3>
             <div class="choices">
             <div class="choice-block">
-            <img src="https://substackcdn.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F3bdb2575-9a92-42f8-8472-bb78c7bd118a_720x405.jpeg" alt="paper" id="rock">
+            <img class="btn" src="https://substackcdn.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F3bdb2575-9a92-42f8-8472-bb78c7bd118a_720x405.jpeg" alt="paper" id="rock">
             <h4>Rock</h4>
             </div>
             <div class="choice-block">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrIUy48U1C8Yetmv-aeKpAMbNgrJliB4gHKA&usqp=CAU" alt="paper" id="paper">
+            <img class="btn" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrIUy48U1C8Yetmv-aeKpAMbNgrJliB4gHKA&usqp=CAU" alt="paper" id="paper">
             <h4>Paper</h4>
             </div>
             <div class="choice-block">
-            <img src="https://content.etilize.com/images/900/1069598981.jpg" alt="scissors" id="scissors">
+            <img class="btn" src="https://content.etilize.com/images/900/1069598981.jpg" alt="scissors" id="scissors">
             <h4>Scissors</h4>
             </div>
             </div>
         </div>
     </section>
-    <button>RESET</button>
+    <button>NEW GAME</button>
 </body>
 </html>
