Completed game logic.
Added resetBoard & checkGameWinner functions and refactored playRound.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 </div>
             </div>
             <div class="scoreboard">
-                <div class="score" id="player-score">2</div>
-                <div class="round">Round 1</div>
-                <div class="score" id="computer-score">4</div>
+                <div class="score" id="player-score">0</div>
+
+                <div class="round">Round <span class="round-counter">1</span></div>
+                <div class="score" id="computer-score">0</div>
             </div>
             <div class="computer side">
                 <h2>Computer</h2>
